# liv-cod-algorithm

./: .gitignore  algorithm.py  algorithm.txt  pyproject.toml
cod_summaries/: debug_QCHWK_device_summary.csv  debug_wafer_summary.csv  first_batch_cod_percentages.csv  qchwq_QCHWK_device_summary.csv  qchwq_cod_percentages.csv  qchwq_wafer_summary.csv
liv_cod_algorithm/: COD_RAW_formatter.ipynb  cod_algorithm.ipynb
